Resolves: tdf#148476 allow dialog resize buttons to "shrink" again

a problem since:

commit 5d388b94735e34ba445d65e1d5030a646aad7dbe
Date:   Thu Jan 27 12:17:48 2022 +0000

    Related: tdf#146648 let SetWindowState size trump the initial layout pref size

Change-Id: Ia765fc011e740386fce568704cb1efb066a5d5bc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133001
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>